--- a/style.css
+++ b/style.css
@@ -7,18 +7,19 @@ color:rgb(46,46,46);
 }
 .body-wrapper{
   position:relative;
+  min-height:100vh;
   max-width:700px;
   z-index: 2;
 }
 h1{
-  margin-left:10%;
-  font-size: 3.5em;
+  margin:20px 0 0 10%;
+  font-size: 4em;
   /*border:solid 1px green;*/
 }
 .video{
   position:fixed;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   height: auto;
   width: auto;
   top:50%;
@@ -31,11 +32,12 @@ h1{
 .content{
   /*border:solid 1px pink;*/
   max-width:400px;
-  font-size: 1.4em;
+  font-size: 2em;
+  max-height:100vh;
 
 }
 .cta{
-bottom:45%;
+bottom:30%;
 }
 .cta a{
   text-decoration: none;
