--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 html,
 body{
-height:100%;
-width:100%;
+/*height:100%;
+width:100%;*/
 font-family: 'Amatic SC', cursive;
 color:rgb(46,46,46);
 }
 .body-wrapper{
   position:relative;
-  min-height:100vh;
+  max-height:100vh;
   max-width:700px;
   z-index: 2;
 }
 h1{
-  margin:20px 0 0 10%;
+  margin:20px 0 0 25%;
   font-size: 4em;
+  pointer-events: none;
+
   /*border:solid 1px green;*/
 }
 .video{
@@ -30,12 +32,14 @@ h1{
   z-index: -1;
   transform:  translate(-50%, -50%);
 }
-.content{
+.sub-head{
   /*border:solid 1px pink;*/
   max-width:500px;
   font-size: 2.5em;
-  max-height:100vh;
-
+  pointer-events: none;
+}
+.sub-head p{
+  letter-spacing:6px;
 }
 .cta{
 bottom:30%;
@@ -49,32 +53,45 @@ bottom:30%;
   font-size: 2.5em;
 }
 .foot-wrapper ul li{
-  padding: 0 30px;
+  padding: 0 25px;
 }
+.copy{
+  width:100px;
+  position: fixed;
+  bottom:2%;
+  right:2%;
+  color:rgb(200,200,200);
+  margin:0 0 0px 0;
+  letter-spacing: .4em;
+ }
+
 
 .future{
   font-size: 3em;
-  font-weight: bold;
-  letter-spacing: .5em;
+  font-weight: bolder;
+  letter-spacing: .2em;
 }
 li a img{
   height:40px;
 
   opacity:0.6;
 }
-.foot-wrapper ul li{
-  padding:0 30px;
-}
+/*.foot-wrapper ul li{
+  padding:0 25px;
+}*/
+
 /*mobile responsive styling*/
 @media (max-width:450px){
   .future{
-    font-size:1.5em;
+    font-size:1.2em;
   }
   .find{
     font-size:1em;
   }
-  .content{
-    font-size:1em;
+  .sub-head{
+    font-size:1.5em;
+    margin-left:5%;
+
   }
   li a img{
     height:20px;
