build slider size and begin jquery

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ color:rgb(46,46,46);
 .body-wrapper{
   position:relative;
   max-height:100vh;
-  max-width:700px;
+  max-width:100%;
   z-index: 2;
 }
 h1{
@@ -34,6 +34,8 @@ h1{
 }
 .sub-head{
   /*border:solid 1px pink;*/
+  float:left;
+  margin-left:15%;
   max-width:500px;
   font-size: 2.5em;
   pointer-events: none;
@@ -79,6 +81,29 @@ i{
 /*.foot-wrapper ul li{
   padding:0 25px;
 }*/
+.gallery{
+  width:1600px;
+  max-height:800px;
+  overflow: hidden;
+  margin-top: 15vh ;
+  text-align: center;
+
+
+}
+.gallery .slides{
+  display:block;
+  width:6000px;
+  height: 800px;
+  margin:0;
+  padding:0:
+  list-style-type:none;
+}
+.gallery .slide{
+  float:left;
+  width:1600px;;
+  height:800px;
+}
+
 
 /*mobile responsive styling*/
 @media (max-width:450px){
@@ -106,12 +131,4 @@ i{
     font-weight: bolder;
   }
 
-}
-.gallery-box{
-  position:relative;
-  height:80vh;
-  width:500px;
-}
-.image-list{
-  position: absolute;
 }
