--- a/style.css
+++ b/style.css
@@ -84,7 +84,12 @@ i{
 
 
 .slides-wrapper{
+  position:fixed;
+  top:10%;
   box-shadow: 0px 10px 15px rgba(0,0,0,0.2) ,0px 2px 10px rgba(250,250,250, 0.2);
+  height:80vh;
+  width:80%;
+  margin:0 auto;
 }
 
 
