--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ color:rgb(46,46,46);
 }
 .body-wrapper{
   position:relative;
-  height:100vh;
+  min-height:100%;
   width:100%;
   z-index: 2;
 }
@@ -86,22 +86,23 @@ i{
 .slides-wrapper{
   position:fixed;
   top:10%;
-  box-shadow: 0px 10px 15px rgba(0,0,0,0.2) ,0px 2px 10px rgba(250,250,250, 0.2);
-  height:80vh;
-  width:80%;
-  margin:0 auto;
+  background-color: rgba(0,0,0,0.2);
+  max-height:80vh;
+  max-width:80%;
+  margin:20px auto 5px;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.2) ,0px 2px 10px rgba(250,250,250, 0.5);
 }
-.slides-wrapper>.slide{
-  padding:20px;
-
-
+.slick-slide{
+  padding:40px;
+  max-height:80vh;
+  width:0;
 
 }
+button .slick-arrow{
 
-
-
+}
 /*mobile responsive styling*/
-@media (max-width:450px){
+@media (max-width:750px){
   .future{
     font-size:1.2em;
   }
@@ -114,7 +115,7 @@ i{
 
   }
   li a i{
-    font-size: 1.5em;
+    font-size: 1em;
     padding: 0 0px;
     opacity: 1;
 
